# fullstack-projects

./: README.md
backends/magvan_backend/: Cargo.toml
backends/magvan_backend/src/: manifests.rs
croissant_demo/: Cargo.toml
croissant_demo/src/: main.rs
croissant_demo/static/: index.html  styles.css
magvan/backend/: Cargo.toml
magvan/backend/src/: integration_tests.rs  main.rs  payloads.rs  prelude.rs
magvan/backend/src/admin/: mod.rs
magvan/backend/src/timer/: mod.rs  services.rs
magvan/files/styles/: mag_style.css
magvan/magvan_backend/: Cargo.toml
magvan/magvan_backend/src/: error.rs  file_management.rs  files.rs  integration_tests.rs  main.rs  metadatas.rs  payloads.rs  postgres.rs
magvan/magvan_backend/src/admin/: mod.rs
magvan/magvan_backend/src/live_stream/: mod.rs
magvan/magvan_backend/src/src/: integration_tests.rs  main.rs  payloads.rs
magvan/magvan_backend/src/src/code_executer/: mod.rs  python.rs
magvan/magvan_backend/src/timer/: mod.rs  services.rs  utils.rs
magvan/magvan_backend/src/websocket/: mod.rs  with_any.rs
magvan/websites/magvik/: index.html
magvan/websites/main_page/: index.html
magvan/websites/upload/: index.html
networking_samples/http/client/: Cargo.toml
networking_samples/tcp/read/: Cargo.toml
networking_samples/tcp/write/: Cargo.toml
networking_samples/ws/client/: Cargo.toml
networking_samples/ws/server/: Cargo.toml
src/: error.rs  files.rs  html.rs  integration_tests.rs  main.rs  payloads.rs  prelude.rs
src/background/: mod.rs
src/background/timer/: mod.rs  services.rs
(+7 files in other folders)
