[package]
name = "magvan_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.7"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4"] }
